Chat with Music

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,18 @@
-# Socket.io server URL (local development)
-NEXT_PUBLIC_SOCKET_URL=http://localhost:3001
+# MelodyVerse Environment Variables Example
+# Copy this file to .env for local development
+
+# Server configuration
+PORT=3002
+
+# Client URLs
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_WS_URL=http://localhost:3002
+NEXT_PUBLIC_SOCKET_URL=http://localhost:3002
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # YouTube API Key (get from Google Cloud Console)
 NEXT_PUBLIC_YOUTUBE_API_KEY=your_youtube_api_key_here
+YOUTUBE_API_KEY=your_youtube_api_key_here
 
-# Server port (optional, defaults to 3001)
-PORT=3001 
+# Node environment
+NODE_ENV=development 
