--- a/.env.local
+++ b/.env.local
@@ -1,13 +1,13 @@
 # MelodyVerse Environment Variables
 
 # YouTube API key for music search
-NEXT_PUBLIC_YOUTUBE_API_KEY="AIzaSyDgqmHI9NkCm4c1p2rJ2oKdY6mf6PVaaZ8"
+NEXT_PUBLIC_YOUTUBE_API_KEY="YOUR_YOUTUBE_API_KEY_HERE"
 
 # Server related config
-NEXT_PUBLIC_BASE_URL="https://melody-verse-rho.vercel.app"
-NEXT_PUBLIC_WS_URL="https://melody-verse-socket-server.onrender.com"
-NEXT_PUBLIC_SOCKET_URL="https://melody-verse-socket-server.onrender.com"
-NEXT_PUBLIC_APP_URL="https://melody-verse-rho.vercel.app"
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_WS_URL="http://localhost:3002"
+NEXT_PUBLIC_SOCKET_URL="http://localhost:3002"
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
-# YOUTUBE_API_KEY=your_youtube_api_key_here
-YOUTUBE_API_KEY="AIzaSyDgqmHI9NkCm4c1p2rJ2oKdY6mf6PVaaZ8"
+# YOUTUBE_API_KEY
+YOUTUBE_API_KEY="YOUR_YOUTUBE_API_KEY_HERE"
